# lw6017r

lw6017r-firmware/: Cargo.toml
lw6017r-firmware/src/: main.rs
lw6017rWifi/: .gitignore  AZ1117ID_3_3TRG1.kicad_sym  CON_0353630860.kicad_sym  fp-info-cache  lw6017rWifi.kicad_pcb  lw6017rWifi.kicad_prl  lw6017rWifi.kicad_pro  lw6017rWifi.kicad_sch  sym-lib-table
lw6017rWifi/footprints.pretty/: CON_353630860.kicad_mod
