[package]
name = "lw6017r-firmware"
version = "0.1.0"
authors = ["Jack Hogan <jackhogan11@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
critical-section = "1.1.2"
debouncr = "0.2.2"
embassy-executor = { version = "0.5.0", features = ["task-arena-size-40960"] }
embassy-sync = { version = "0.6.0" }
embassy-time = { version = "0.3.1", features = ["generic-queue-8"] }
embedded-hal-async = "1.0.0"
esp-backtrace = { version = "0.12.0", features = [
    "esp32s3",
    "exception-handler",
    "panic-handler",
    "println",
] }
esp-hal = { git = "https://github.com/esp-rs/esp-hal", features = ["esp32s3"] }
esp-hal-embassy = { git = "https://github.com/esp-rs/esp-hal", features = [
    "esp32s3",
] }
esp-println = { version = "0.9.1", features = ["esp32s3", "log"] }
heapless = "0.8.0"
log = { version = "0.4.21" }
static_cell = { version = "2.1.0", features = ["nightly"] }
[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1        # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
overflow-checks = false
